// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command list should contain all templates in store 1`] = `
"NEO v3.3.2 (​https://github.com/neo-hack/neo​)

[log] Note: cached, uncached

[log] Found 2 templates:

[log] neo:
[log] @aiou/ts-lib-template
ts-lib-template"
`;

exports[`command list should show empty template list with wrong preset 1`] = `
"NEO v3.3.2 (​https://github.com/neo-hack/neo​)

[log] No templates..."
`;

exports[`command list should show template list filter by preset 1`] = `
"NEO v3.3.2 (​https://github.com/neo-hack/neo​)

[log] Note: cached, uncached

[log] Found 2 templates:

[log] @aiou/ts-lib-template
ts-lib-template"
`;
